check code in google java format